rustfmt + toml changes

--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 TODO:
-* pause state
-* in-game menu
+* in-game menu (do not reset game, close via Esc)
+* display message in pause state (implement substates for that)
+* compile all messages (to texture) and store them somewhere
+* center all menus
 * remapping keys from in-game
+* try cross-compiling
