--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 TODO:
-* in-game menu (do not reset game, close via Esc)
-* display message in pause state (implement substates for that)
-* compile all messages (to texture) and store them somewhere
+* display message in pause state
+* compile all messages (to textures) and store them somewhere
 * remapping keys from in-game
 * try cross-compiling
 * make menu centering optional
 * builder pattern for menu (related to menu centering)
+* implement states stack, no need for fields like substates etc.
+* Show game title in menu / menu title field
