change messages layout, refactor controls and messages

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 TODO:
-* group messages types
 * add menustate with FnOnce-based actions
 * remapping keys from in-game
 * try cross-compiling
 * builder pattern for menu (related to menu centering)
 * static views with text (start/finish)
+* lazy_static Cell with controls (related to remapping keys)
